<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_medium_2"
    android:layout_marginEnd="@dimen/margin_medium_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/color_blue_dark">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivPlace"
                android:layout_width="100dp"
                android:src="@drawable/tour1"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="170dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvCountry"
                    android:text="@string/lbl_thailand"
                    android:textColor="@color/color_black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvPlan"
                    android:text="@string/lbl_plan"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:textSize="@dimen/text_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvCost"
                    android:text="@string/lbl_cost"
                    android:textColor="@color/color_black"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
                <TextView
                    android:id="@+id/tvRating"
                    android:text="@string/lbl_4_3"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/margin_medium"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/ivStar"
                    android:src="@drawable/ic_star_white_24dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>