<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_below="@id/appbar1"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    tools:showIn="@layout/fragment_detail"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rlButtons"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_marginEnd="@dimen/margin_large"
            android:orientation="vertical"
            android:layout_width="60dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivFreeWifi"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@drawable/ic_wifi_grey_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvFreeWifi"
                android:text="@string/lbl_free_wi_fi"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginEnd="@dimen/margin_large"
            android:id="@+id/ll2"
            android:layout_toEndOf="@id/ll1"
            android:orientation="vertical"
            android:layout_width="60dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginStart="@dimen/margin_medium_2"
                android:id="@+id/ivSandBeach"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@drawable/ic_beach_access_grey_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvSandBeach"
                android:text="@string/lbl_sand_beach"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginEnd="@dimen/margin_large"
            android:id="@+id/ll3"
            android:layout_toEndOf="@id/ll2"
            android:orientation="vertical"
            android:layout_width="60dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginStart="@dimen/margin_medium_2"
                android:id="@+id/ivFirstCoastline"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@drawable/ic_wifi_grey_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvFirstCoastline"
                android:text="@string/lbl_first_coastline"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_width="60dp"
            android:orientation="vertical"
            android:layout_toEndOf="@id/ll3"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBar"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@drawable/ic_beach_access_grey_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvBar"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/lbl_bar_and_restaurant"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/rlScores"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_marginStart="@dimen/margin_large"
            android:layout_weight="1.3"
            app:cardCornerRadius="20dp"
            android:layout_width="0dp"
            android:layout_height="100dp">
            <RelativeLayout
                android:background="@color/color_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivBooking"
                    android:src="@drawable/booking"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:background="@color/color_blue_light"
                    android:padding="@dimen/margin_medium"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tvBooking"
                    android:layout_toEndOf="@id/ivBooking"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/lbl_booking"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvRatingBooking"
                    android:text="@string/lbl_rate"
                    android:layout_below="@id/tvBooking"
                    android:layout_toEndOf="@id/ivBooking"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvReviewsBooking"
                    android:text="@string/lbl_based_on_30_reviews"
                    android:layout_below="@id/ivBooking"
                    android:textSize="@dimen/text_smaller"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="@dimen/margin_large"
            android:layout_weight="1.3"
            app:cardCornerRadius="20dp"
            android:layout_width="0dp"
            android:layout_height="100dp">
            <RelativeLayout
                android:background="@color/color_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivHotelOut"
                    android:src="@drawable/booking"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:background="@color/color_blue_light"
                    android:padding="@dimen/margin_medium"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

                <TextView
                    android:id="@+id/tvHotelOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_toEndOf="@id/ivHotelOut"
                    android:text="@string/lbl_hotelout"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvRatingHotelOut"
                    android:text="@string/lbl_rate"
                    android:layout_below="@id/tvHotelOut"
                    android:layout_toEndOf="@id/ivHotelOut"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvReviewsHotelOut"
                    android:text="@string/lbl_based_on_30_reviews"
                    android:layout_below="@id/ivHotelOut"
                    android:textSize="@dimen/text_smaller"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:id="@+id/tvDescription"
        android:text="@string/lbl_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImages"
        android:layout_marginTop="@dimen/margin_large"
        tools:listitem="@layout/detail_image_list"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>