<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_white">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium_2">

            <ImageButton
                android:id="@+id/ibtnNavigationMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_menu_black_24dp" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tvName"
                android:background="@drawable/ic_beach_access_green_24dp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/lbl_discount_tour"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_regular_3x" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/lbl_find_the_best_tour"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/lbl_country"
                android:textSize="@dimen/text_regular_3x" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCountry"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginStart="0dp"
                android:orientation="horizontal"
                tools:listitem="@layout/country_list_item" />

            <TextView
                android:id="@+id/tvPopularTours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvCountry"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/lbl_popular_tours"
                android:textSize="@dimen/text_regular_3x" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularTours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPopularTours"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical"
                tools:listitem="@layout/popular_tours_list_item" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>