<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_width="170dp"
        android:layout_height="250dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivBackground"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:paddingStart="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvTag"
                    android:padding="8dp"
                    android:text="@string/lbl_new"
                    android:textColor="@color/color_white"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@color/color_transparent_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/ivPerson1"
                    android:src="@drawable/person1"
                    android:layout_toEndOf="@id/tvTag"
                    android:scaleType="centerCrop"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <ImageView
                    android:id="@+id/ivPerson2"
                    android:src="@drawable/person2"
                    android:scaleType="centerCrop"
                    android:layout_toEndOf="@id/ivPerson1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <ImageView
                    android:id="@+id/ivPerson3"
                    android:src="@drawable/person3"
                    android:scaleType="centerCrop"
                    android:layout_toEndOf="@id/ivPerson2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:id="@+id/tvCountryName"
                    android:text="@string/lbl_thailand"
                    android:layout_width="wrap_content"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_above="@id/tvTours"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvTours"
                    android:text="@string/lbl_18_tours"
                    android:textColor="@color/color_white"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/ll"
                    android:orientation="vertical"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:background="@color/color_transparent_white"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">
                    <TextView
                        android:id="@+id/tvRating"
                        android:text="@string/lbl_4_3"
                        android:textStyle="bold"
                        android:textColor="@color/color_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/ivStar"
                        android:src="@drawable/ic_star_white_24dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>
                </LinearLayout>

            </RelativeLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>